--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "pnpm --filter=* run build",
+    "rm:nm": "find ./ -name 'node_modules' -exec rm -rf {} +",
+    "rm:next": "find ./ -name '.next' -exec rm -rf {} +",
+    "changeset": "changeset",
+    "version-packages": "changeset version"
   },
   "keywords": [],
   "author": "",
