--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,10 +6,10 @@ on:
       - main
 
 permissions:
-  contents: read|write
-  packages: read|write
-  pull-requests: read|write
-  statuses: read|write
+  contents: write
+  packages: write
+  pull-requests: write
+  statuses: write
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
