--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,5 +54,7 @@ jobs:
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
+        with:
+          publish: pnpm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
