--- a/.github/workflows/push-release-image.yml
+++ b/.github/workflows/push-release-image.yml
@@ -1,15 +1,15 @@
 name: Build And Push Release Docker Image (Prod Env)
 on:
-  release:
-    types:
-      - published
-  # push:
-  #   tags:
-  #     - '**'
+  # release:
+  #   types:
+  #     - published
+  push:
+    tags:
+      - '**'
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
-permissions: read-all
+permissions: write-all
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -54,16 +54,16 @@ jobs:
           done
           # docker build -f ./apps/console/Dockerfile -t api7/api7-ee-3-console:dev .
 
-      # - name: Login to Registry
-      #   uses: docker/login-action@v1
-      #   with:
-      #     registry: ${{ secrets.PRIVATE_DOCKER_REGISTRY }}
-      #     username: ${{ secrets.PRIVATE_DOCKER_USERNAME }}
-      #     password: ${{ secrets.PRIVATE_DOCKER_PASSWORD }}
-      # - name: Push Images
-      #   env:
-      #     REGISTRY: ${{ secrets.PRIVATE_DOCKER_REGISTRY }}
-      #     IMAGE_TAG: ${{ steps.version.outputs.FRONTEND_VERSION }}
-      #   run: |
-      #     docker tag api7/api7-ee-3-console:dev $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
-      #     docker push $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
+      - name: Login to Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.PRIVATE_DOCKER_REGISTRY }}
+          username: ${{ secrets.PRIVATE_DOCKER_USERNAME }}
+          password: ${{ secrets.PRIVATE_DOCKER_PASSWORD }}
+      - name: Push Images
+        env:
+          REGISTRY: ${{ secrets.PRIVATE_DOCKER_REGISTRY }}
+          IMAGE_TAG: ${{ steps.version.outputs.FRONTEND_VERSION }}
+        run: |
+          docker tag api7/api7-ee-3-console:dev $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
+          docker push $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
