--- a/.github/workflows/push-release-image.yml
+++ b/.github/workflows/push-release-image.yml
@@ -39,31 +39,31 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Build ${{ env.P_NAME }} Image
-        env:
-          IMAGE_TAG: ${{ env.P_VER }}
-        run: |
-          variables=("P_VER" "P_NAME" "P_PATH")
-          for var in "${variables[@]}"; do
-            if [[ -z "${{ env[$var] }}" ]]; then
-              echo "环境变量 $var 不存在"
-              exit 1
-            else
-              echo "环境变量 $var 存在"
-            fi
-          done
-          # docker build -f ./apps/console/Dockerfile -t api7/api7-ee-3-console:dev .
+      # - name: Build ${{ env.P_NAME } }  Image
+      # env:
+      # IMAGE_TAG: ${{ env.P_VER } }
+      # run: |
+      # variables=("P_VER" "P_NAME" "P_PATH")
+      # for var in "${variables[@]}"; do
+      #   if [[ -z "${{ env[$var]" } }]]; then
+      #     echo "环境变量 $var 不存在"
+      #     exit 1
+      #   else
+      #     echo "环境变量 $var 存在"
+      #   fi
+      # done
+      # docker build -f ./apps/console/Dockerfile -t api7/api7-ee-3-console:dev .
 
-      - name: Login to Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.PRIVATE_DOCKER_REGISTRY }}
-          username: ${{ secrets.PRIVATE_DOCKER_USERNAME }}
-          password: ${{ secrets.PRIVATE_DOCKER_PASSWORD }}
-      - name: Push Images
-        env:
-          REGISTRY: ${{ secrets.PRIVATE_DOCKER_REGISTRY }}
-          IMAGE_TAG: ${{ steps.version.outputs.FRONTEND_VERSION }}
-        run: |
-          docker tag api7/api7-ee-3-console:dev $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
-          docker push $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
+      # - name: Login to Registry
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: ${{ secrets.PRIVATE_DOCKER_REGISTRY } }
+      #     username: ${{ secrets.PRIVATE_DOCKER_USERNAME } }
+      #     password: ${{ secrets.PRIVATE_DOCKER_PASSWORD } }
+      # - name: Push Images
+      #   env:
+      #     REGISTRY: ${{ secrets.PRIVATE_DOCKER_REGISTRY } }
+      #     IMAGE_TAG: ${{ steps.version.outputs.FRONTEND_VERSION } }
+      #   run: |
+      #     docker tag api7/api7-ee-3-console:dev $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
+      #     docker push $REGISTRY/api7/api7-ee-3-console:$IMAGE_TAG
