--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Create Release Pull Request
         uses: SkyeYoung/changesets-no-npm-action@v1.4.7
+        id: mktag
         with:
           publish: pnpm release
         env:
@@ -68,7 +69,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: release
-    if: startsWith(github.ref, 'refs/tags/')
+    if: ${{ contains(needs.release.outputs.mktag, ' to release list') }}
     steps:
       - uses: actions/checkout@v3
 
