--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,4 +57,4 @@ jobs:
         with:
           publish: pnpm release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.EE3_FE_TOKEN }}
